fix[style]: paragraph spacing

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -275,7 +275,7 @@ svg:not(:root) {
  *      <li><a href="#link-1">Link 1</a></li>
  *      <li><a href="#link-2">Link 2</a></li>
  *      <li><a href="#link-3">Link 3</a></li>
- *    </ul>
+ [<64;251;24M[<64;251;24M[<64;251;24M]]]*    </ul>
  *  </nav>
  */
 
@@ -323,5 +323,11 @@ b, i, strong, em, blockquote, p, q, span, figure, img, h1, h2, header, input, a,
 }
 
 .page__content p {
-  margin: 0 !important;
+  padding: 0.65em 0;
+  margin: 0;
+
+  &:first-of-type {
+  	padding-top: 0;
+  }
 }
+
